refactor: update Docker configuration and environment variables; add data tests

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://user:password@localhost:5432/testdb"
+DATABASE_URL="postgresql://user:password@host.docker.internal:5432/mydb?schema=public"
 PORT=5000
