--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,25 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:latest
-    container_name: postgres_container
-    restart: always
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: testdb
-    ports:
-      - "5433:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-      - ./docker/init.sql:/docker-entrypoint-initdb.d/init.sql
-
-  app:
+  node_app:
     build: .
     container_name: node_app
-    restart: always
-    environment:
-      DATABASE_URL: postgresql://user:password@postgres:5434/testdb
-      PORT: 5000
     ports:
       - "5000:5000"
     depends_on:
-      - postgres
+      - postgres_db
+    environment:
+      DATABASE_URL: "postgresql://user:password@postgres_db:5432/mydb?schema=public"
     volumes:
       - .:/app
-      - /app/node_modules
+    command: ["npm", "run", "dev"]
 
-volumes:
-  pgdata:
+  postgres_db:
+    image: postgres:13
+    container_name: postgres_db
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: mydb
+    ports:
+      - "5432:5432"
