--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
