--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,6 @@ jobs:
           POSTGRES_USER: user
           POSTGRES_PASSWORD: password
           POSTGRES_DB: testdb
-          DATABASE_URL: postgres://user:password@localhost:5432/testdb  # Add this line
         ports:
           - 5432:5432
 
@@ -31,6 +30,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+
+      - name: Set environment variables
+        run: echo "DATABASE_URL=postgres://user:password@localhost:5432/testdb" >> $GITHUB_ENV  # 👈 Add this line
 
       - name: Install dependencies
         run: npm install
